kde-workspace (4:4.8.4-5) UNRELEASED; urgency=low

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Remove "New upstream release" from the previous changelog entry
    (Closes: #691302). Thanks Filipus Klutiero.
  * sessreg was merged in kdm:
    - Drop the use-sessreg option in kdm.options and it's man page, as it is
      no longer needed.

  [ Pino Toscano ]
  * Backport upstream commit 89161c40e064958aa192b2202670316671d7e377 to fix
    the "demand" status of windows in the taskbar widget; patch
    upstream_Check-if-attention-demanding-status-has-changed-when.patch.
    (Closes: #685334)
  * Backport upstream commits d0343319fcfc249a38c79171be727d7133984eeb and
    53f6eca921a44a1f5e567b92d45ea84599afea74 to make powermanagementprofilesrc
    read as cascading config, and 9994e178b790b03a464c335e624366f82f0da643 for
    kwinrc.
  * Backport upstream commit 5b35757fc3613a18e2d784af53d1d23ebe295028 to
    improve the sorting of init .js files (followup of the changes backported
    in 4:4.8.4-3 with upstream_make-sure-scripts-are-executed-sorted.patch);
    patch upstream_Make-sure-the-plasma-desktop-scripts-are-sorted-in-t.patch.
  * Backport upstream commit 70cd86a5eef103137e64f2e3868a5bd2d58d71d7 to fix
    the deletion of launchers of preferred applications; patch
    upstream_Fix-deletion-of-preferred-application-launchers.patch.
    (Closes: #686131)
  * Drop hal from kdm.init. (Closes: #694021)
  * Make kde-workspace-bin ship a /etc/kde4 directory. (Closes: #694253)

  [ Debconf translation updates ]
  * Fix encoding of Polish (thanks to David Prévot). (Closes: #691953)
  * Fix encoding of Spanish (thanks to Camaleón). (Closes: #692209)

  [ José Manuel Santamaría Lema ]
  * Backport upstream commit 0b7e46ddd6d3894f246512429b7a03e10fb3f53d to fix a
    bug which breaks the rendering of gtk menus (you can't see them sometimes);
    patch upstream_dont-fail-to-render-gtk-menus.diff. (Closes: #690428)
