@@ -6,6 +6,8 @@ kde-workspace (4:4.8.4-5) UNRELEASED; urgency=low
   * sessreg was merged in kdm:
     - Drop the use-sessreg option in kdm.options and it's man page, as it is
       no longer needed.
+    - Do not set UseSessReg to false in debian/patches/kdmrc_defaults.diff.
+      The bug it solved has dissapeared during the merge.
 
   [ Pino Toscano ]
   * Backport upstream commit 89161c40e064958aa192b2202670316671d7e377 to fix
